Various changes for hardware transcoding.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,4 +33,8 @@ install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/resources/exporty_exec_start_pre PERMI
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/resources/exportyd.service DESTINATION /lib/systemd/system)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/resources/runExporty DESTINATION Exporty)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/resources/60_exporty_rsyslog.conf DESTINATION /etc/rsyslog.d)
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/config/config.xml DESTINATION Exporty)
+if(CMAKE_SYSTEM MATCHES "Windows")
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/config/windows/config.xml DESTINATION Exporty)
+elseif(CMAKE_SYSTEM MATCHES "Linux")
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/config/linux/config.xml DESTINATION Exporty)
+endif(CMAKE_SYSTEM MATCHES "Windows")
