Adding timezone env file to systemd unit file

--- a/resources/exportyd.service
+++ b/resources/exportyd.service
@@ -4,6 +4,7 @@ After=network.target
 Requires=network.target
 
 [Service]
+EnvironmentFile=-/data/gateway/timezone
 User=root
 WorkingDirectory=/usr/local/Pelco/Exporty
 PermissionsStartOnly=true
