Adding a queue to each rsyslog forwarding rule to ensure that if any rule is unable to forward that rules farther down the chain are not blocked.

--- a/resources/60_exporty_rsyslog.conf
+++ b/resources/60_exporty_rsyslog.conf
@@ -3,7 +3,9 @@
 # <= 5 notice
 # <= 4 warning
 # <= 3 error
-
+$ActionQueueType LinkedList
+$ActionQueueDiscardMark 1000
+$ActionQueueDicardSeverity 0
 if $programname == 'Exporty' and $syslogseverity <= 5 then /var/log/messages
-if $programname == 'Exporty' then ~
+if $programname == 'Exporty' then stop
 
